# MathGl-based-visualisation-module

./: .gitignore  README.md
Binary versions/VS2012BUILD/include/mgl2/: define.h
Binary versions/VS2012BUILD/lib/: mgl-qt-static.lib  mgl-qt.exp  mgl-qt.lib  mgl-qt5-static.lib  mgl-qt5.exp  mgl-qt5.lib  mgl.exp  mgl.lib
Binary versions/VS2013BUILD/include/mgl2/: dllexport.h
Binary versions/VS2013BUILD/lib/: mgl-qt-static.lib  mgl-qt.exp  mgl-qt.lib  mgl-qt5-static.lib  mgl-qt5.exp  mgl-qt5.lib  mgl.exp  mgl.lib
Binary versions/VS2015BUILD/lib/: mgl-qt-static.lib  mgl-qt.exp  mgl-qt.lib  mgl-qt5-static.lib  mgl-qt5.exp  mgl-qt5.lib  mgl.exp  mgl.lib
Binary versions/VS2017BUILD/lib/: mgl-qt-static.lib  mgl-qt.exp  mgl-qt.lib  mgl-qt5-static.lib  mgl-qt5.exp  mgl-qt5.lib  mgl.exp  mgl.lib
MathGL_module/: CMakeLists.txt  functionArg.cpp  functionArg.h  main.cpp  mathGL_Graphics.cpp  mathGL_Graphics.h  mathGL_Graphics_Object.cpp  mathGL_Graphics_Object.h  mathGL_graphics.cpp  mathGL_graphics.h  mathGL_graphics_frame_properties.cpp  mathGL_graphics_frame_properties.h  mathGL_graphics_object.cpp  mathGL_graphics_object.h
MathGL_module/examples/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  example9.cpp  spectrum_example.cpp
MathGL_module/include/: functionArg.h  mathGL_graphics.h  mathGL_graphics_frame_properties.h
MathGL_module/src/: functionArg.cpp  mathGL_graphics.cpp  mathGL_graphics_frame_properties.cpp  mathGL_graphics_object.cpp
Screenshots/: UML_Diagram.xml
(+1 files in other folders)
